--- a/7.ipynb
+++ b/7.ipynb
@@ -370,7 +370,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "7-9\n",
+        "7-9 Syklotronin magneettikentän magneettivuon tiheys on 0.45 T ja D-eletrodien säde on 0.66 m.<br>\n",
+        "a) Laske, mikä on kiihdytettyjen protonien liike-energia niiden poistuessa syklotronista.<br>\n",
+        "b) Millä taajudella protoneja on kiihdytettävä.\n",
         "\n",
         "Kirjan vastaukset: a) 4.2 MeV b) 6.9 MHz"
       ],
@@ -383,9 +385,55 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "q=1.6021773e-19\n",
+        "mp=1.6726231e-27\n",
+        "B=0.45\n",
+        "r=0.66\n",
+        "v=q*B*r/mp\n",
+        "Ej=0.5*mp*v^2\n",
+        "Ee=Ej/q\n",
+        "@printf \"Liike-energia on %.2e J eli %.2e eV\\n\" Ej Ee\n",
+        "f=v/(2*pi*r)\n",
+        "@printf \"Tarvittava taajuus on %.1e Hz\\n\" f"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Liike-energia on 6.77e-13 J eli 4.22e+06 eV\n",
+            "Tarvittava taajuus on 6.9e+06 Hz\n"
+          ]
+        }
+      ],
+      "execution_count": 37,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-10T15:01:54.584Z",
+          "iopub.execute_input": "2021-10-10T15:01:54.598Z",
+          "iopub.status.idle": "2021-10-10T15:01:54.622Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "7-10\n",
+        "7-10 Syklotronilla kiihdytetään deuteroneja. r=0.45 m. Niiden liike-energia on 9.6 MeV. Laske<br>\n",
+        "a) kiihdytysjännitteen taajuus\n",
+        "b) hiukkasten ratatasoa vastaan kohtisuoran magneettikentän magneettivuon tiheys.<br>\n",
+        "Deuteroni on deuterium atomin ydin, protoni+neutroni (https://fi.wikipedia.org/wiki/Sidosenergia)\n",
         "\n",
         "Kirjan vastaukset: a) 11 MHz b) 1.4 T"
       ],
@@ -398,9 +446,54 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "q=1.6021773e-19\n",
+        "m=(1.6726231e-27+1.6749286e-27)\n",
+        "r=0.45\n",
+        "Ee=9.6e6\n",
+        "Ej=Ee*q\n",
+        "v=sqrt(2*Ej/m)\n",
+        "f=v/(2*pi*r)\n",
+        "B=m*v/(q*r)\n",
+        "@printf(\"Taajuus on %.0f MHz ja magneettivuon tiheys on %.1f T.\\n\",\n",
+        "  f/1e6,B)\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Taajuus on 11 MHz ja magneettivuon tiheys on 1.4 T.\n"
+          ]
+        }
+      ],
+      "execution_count": 45,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-10T16:24:05.277Z",
+          "iopub.execute_input": "2021-10-10T16:24:05.295Z",
+          "iopub.status.idle": "2021-10-10T16:24:05.430Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "7-11\n",
+        "7-11 Elektroni liikkuu ratanopeudella 9 Mm/s homogeenisessa magneettikentässä, jonka magneettivuon tiheys on 0.25 mT. Elektronin liikkeen suunta on kohtisuorassa magneettikentän suuntaan vastaan. Laske<br>\n",
+        "a) elektroniin kohdistuva magneettinen voima<br>\n",
+        "b) elektronin radan säde<br>\n",
+        "c) aika, joka elektronilta kuluu magneettikentässä yhteen kierrokseen.\n",
         "\n",
         "Kirjan vastaukset: a) 0.36 fN, liikesuuntaan nähden oikealle<br>\n",
         "b) 0.2 m c) 0.14 μs"
@@ -414,11 +507,50 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "q=1.6021773e-19\n",
+        "me=9.1093897e-31\n",
+        "v=9e6\n",
+        "B=0.25e-3\n",
+        "f=v*q*B\n",
+        "r=me*v/(q*B)\n",
+        "s=2*pi*r\n",
+        "t=s/v\n",
+        "@printf(\"Fm=%.2e N, r=%.1f m, t=%.2e s\\n\",f,r,t)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fm=3.60e-16 N, r=0.2 m, t=1.43e-07 s\n"
+          ]
+        }
+      ],
+      "execution_count": 49,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-10T16:35:54.530Z",
+          "iopub.execute_input": "2021-10-10T16:35:54.544Z",
+          "iopub.status.idle": "2021-10-10T16:35:54.573Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "7-13\n",
-        "\n",
-        "Kirjan vastaus: 10.2 mm"
+        "7-12 Nopeusvalitsin ja massaspektrometri https://www.youtube.com/watch?v=FO_aEDUHovY"
       ],
       "metadata": {
         "nteract": {
@@ -431,7 +563,69 @@
     {
       "cell_type": "markdown",
       "source": [
-        "7-14\n",
+        "7-13 Tutkitaan $^{114}Sn^+$ ja $^{115}Sn^+$ ioneja. Laske ilmaisimeen osuvien tina-atomien osumakohtien etäisyys toisistaan.\n",
+        "Tulonopeus magneettikenttään nopeusvalitsimen sähkökentän voimakkuden E 28.6 kV/m ja magneettivuon tiheyden 0.11 T perusteella. Säteet analysaattorin magneettivuon tiheyden B 0.53 T perusteella.\n",
+        "\n",
+        "Kirjan vastaus: 10.2 mm"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "u=1.66054e-27\n",
+        "q=1.6021773e-19\n",
+        "m114=113.903*u\n",
+        "m115=114.903*u\n",
+        "E=28.6e3\n",
+        "Bv=0.11\n",
+        "Ba=0.53\n",
+        "v=E/Bv\n",
+        "r114=m114*v/(q*Ba)\n",
+        "r115=m115*v/(q*Ba)\n",
+        "@printf(\"\"\"Säteiden %.4f m ja %.4f m \n",
+        "  osumakohtien erotus on %.1f mm\\n\"\"\",\n",
+        "  r115,r114,2e3*(r115-r114))\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Säteiden 0.5842 m ja 0.5791 m \n",
+            "osumakohtien erotus on 10.2 mm\n"
+          ]
+        }
+      ],
+      "execution_count": 59,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-10T17:21:14.500Z",
+          "iopub.execute_input": "2021-10-10T17:21:14.513Z",
+          "iopub.status.idle": "2021-10-10T17:21:14.542Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7-14 https://fi.wikipedia.org/wiki/Hall-ilmi%C3%B6 Verisuoneen muodostuu sähkökenttä, jonka aiheuttama voima kumoaa magneettisen voiman jotta veri virtaa suonen suuntaisesti.\n",
         "\n",
         "Kirjan vastaukset: a) alaosa b) 2.1 mm/s vasemmalle"
       ],
@@ -440,6 +634,42 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "E=11e-6/0.0038\n",
+        "B=1.4\n",
+        "v=E/B\n",
+        "@printf(\"Nopeus on %.1f mm/s\\n\",1e3*v)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nopeus on 2.1 mm/s\n"
+          ]
+        }
+      ],
+      "execution_count": 63,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-10T18:06:17.391Z",
+          "iopub.execute_input": "2021-10-10T18:06:17.404Z",
+          "iopub.status.idle": "2021-10-10T18:06:17.746Z"
         }
       }
     }
