kertaus 12-17 ja typo kappaleessa 4

--- a/4.ipynb
+++ b/4.ipynb
@@ -464,7 +464,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4-14 Lesilevyn pinnalla on ohut asetonikerros. Valo, jonka aallonpituutta voi säätää, osuu kohtisuorasti levyn pintaan. Kalvo ei heijasta valoa, kun aallonpituus on 600 nm ja heijastuneen valon intensiteetillä on maksimi, kun aallonpituus on 700 nm. Laske asetonikerroksen paksuus. Asetonin taitekerroin on 1.25.\n",
+        "4-14 Lasilevyn pinnalla on ohut asetonikerros. Valo, jonka aallonpituutta voi säätää, osuu kohtisuorasti levyn pintaan. Kalvo ei heijasta valoa, kun aallonpituus on 600 nm ja heijastuneen valon intensiteetillä on maksimi, kun aallonpituus on 700 nm. Laske asetonikerroksen paksuus. Asetonin taitekerroin on 1.25.\n",
         "\n",
         "Kirjan vastaus 840 nm, jossa on minun mielestä virhe. Tehtävä, joka silloin ratkaistaan, on:<br>\n",
         "Ei heijasta valoa, kun aallonpituus on 700 nm ja maksimi on kun aallonpituus on 600 nm."
