--- a/k.ipynb
+++ b/k.ipynb
@@ -601,11 +601,51 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "d=0.01/5700\n",
+        "alpha=22*pi/180\n",
+        "lambda=d*sin(alpha)\n",
+        "f=c/lambda\n",
+        "@printf(\"Aallonpituus on %.0f nm, taajuus %.2f THz.\\n\",\n",
+        "  lambda*1e9,f/1e12)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aallonpituus on 657 nm, taajuus 456.16 THz.\n"
+          ]
+        }
+      ],
+      "execution_count": 262,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-31T17:45:28.602Z",
+          "iopub.execute_input": "2021-10-31T17:45:28.621Z",
+          "iopub.status.idle": "2021-10-31T17:45:28.660Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "k-13\n",
+        "k-13 vaimennus, kun $2d=k\\lambda$ l=600 nm\n",
         "\n",
-        "Kirjan vastaus: 840 nm"
+        "vahvistus jos $2d=(k+½)\\lambda$ l=700 nm\n",
+        "\n",
+        "Kirjan vastaus: 840 nm, mutta se on mielestäni väärä. Sama tehtävä oli myös 4-14. Vastauksessa k:n arvot eivät ole kokonaislukuja."
       ],
       "metadata": {
         "nteract": {
@@ -616,9 +656,72 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "n=1.25\n",
+        "l1=600/n\n",
+        "l2=700/n\n",
+        "bestd=10000\n",
+        "bestdiff=10000\n",
+        "for i=1:5\n",
+        "  d1=i*l1/2\n",
+        "  for j=1:5\n",
+        "    d2=(j+0.5)*l2/2\n",
+        "    diff=abs(d1-d2)\n",
+        "    if diff<bestdiff\n",
+        "      k1=i\n",
+        "      k2=j\n",
+        "      bestd=d1\n",
+        "      bestdiff=diff\n",
+        "    end\n",
+        "  end\n",
+        "end\n",
+        "@printf(\"Kalvon paksuus on %.0f nm. ero on %.0f nm\\n\",\n",
+        "  bestd,bestdiff)\n",
+        "@printf(\"l1=%.0f l2=%.0f k1=%d, k2=%d\\n\", l1,l2,k1,k2)\n",
+        "d=840\n",
+        "k1=2*d/l1\n",
+        "k2=2*d/l2-0.5\n",
+        "@printf(\"Kirjan vastauksessa k1=%.1f ja k2=%.1f\\n\",k1,k2)\n",
+        "d1=4*l1/2\n",
+        "d2=3.5*l2/2\n",
+        "@printf(\"Tällöin d1=%.0f ja d=%.0f\\n\",d1,d2)\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kalvon paksuus on 720 nm. ero on 20 nm\n",
+            "l1=480 l2=560 k1=3, k2=2\n",
+            "Kirjan vastauksessa k1=3.5 ja k2=2.5\n",
+            "Tällöin d1=960 ja d=980\n"
+          ]
+        }
+      ],
+      "execution_count": 275,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-31T18:31:01.716Z",
+          "iopub.execute_input": "2021-10-31T18:31:01.738Z",
+          "iopub.status.idle": "2021-10-31T18:31:01.906Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "k-16\n",
+        "k-16 $F_m=q v B sin \\alpha$\n",
         "\n",
         "Kirjan vastaus: a 43 fN"
       ],
@@ -627,6 +730,44 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "q=1.60218e-19\n",
+        "v=1.3e6\n",
+        "B=990e-3\n",
+        "a=12*pi/180\n",
+        "Fm=q*v*B*sin(a)\n",
+        "@printf(\"Voima on %.0f fN\\n\",Fm*1e15)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Voima on 43 fN\n"
+          ]
+        }
+      ],
+      "execution_count": 281,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-31T18:58:44.580Z",
+          "iopub.execute_input": "2021-10-31T18:58:44.604Z",
+          "iopub.status.idle": "2021-10-31T18:58:44.652Z"
         }
       }
     },
@@ -642,6 +783,44 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "q=1.60218e-19\n",
+        "v=8.5e6\n",
+        "B=3.5e-6/15e-4\n",
+        "a=pi/2\n",
+        "Fm=q*v*B*sin(a)\n",
+        "@printf(\"Voima on %.1f fN\\n\",Fm*1e15)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Voima on 3.2 fN\n"
+          ]
+        }
+      ],
+      "execution_count": 284,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-10-31T19:01:21.247Z",
+          "iopub.execute_input": "2021-10-31T19:01:21.270Z",
+          "iopub.status.idle": "2021-10-31T19:01:21.316Z"
         }
       }
     },
