--- a/k.ipynb
+++ b/k.ipynb
@@ -18,15 +18,15 @@
       "source": [
         "using Printf\n",
         "using Dates\n",
-        "@printf \"%s\\n\" Dates.now();\n",
-        "versioninfo(verbose=false);"
+        "@printf(\"%s\\n\",Dates.now())\n",
+        "versioninfo(verbose=false)"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2021-10-30T19:25:56.593\n",
+            "2021-11-01T21:29:13.57\n",
             "Julia Version 1.5.4\n",
             "Commit 69fcb5745b (2021-03-11 19:13 UTC)\n",
             "Platform Info:\n",
@@ -42,9 +42,9 @@
           ]
         }
       ],
-      "execution_count": 158,
+      "execution_count": 297,
       "metadata": {
-        "collapsed": true,
+        "collapsed": false,
         "jupyter": {
           "source_hidden": false,
           "outputs_hidden": false
@@ -55,9 +55,9 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-10-30T16:25:56.623Z",
-          "iopub.execute_input": "2021-10-30T16:25:56.648Z",
-          "iopub.status.idle": "2021-10-30T16:25:56.687Z"
+          "iopub.status.busy": "2021-11-01T19:29:13.637Z",
+          "iopub.execute_input": "2021-11-01T19:29:13.658Z",
+          "iopub.status.idle": "2021-11-01T19:29:13.700Z"
         }
       }
     },
@@ -827,7 +827,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "k-18\n",
+        "k-18 $\\omega=\\frac{qB}{m}$\n",
         "\n",
         "Kirjan vastaus: 93 ns"
       ],
@@ -840,9 +840,47 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "q=2*1.60218e-19\n",
+        "B=1.4\n",
+        "m=6.644e-27\n",
+        "omega=q*B/m\n",
+        "t=2*pi/omega\n",
+        "@printf(\"Kierrosaika on %.0f ns.\\n\",t*1e9)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kierrosaika on 93 ns.\n"
+          ]
+        }
+      ],
+      "execution_count": 294,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-01T19:02:41.623Z",
+          "iopub.execute_input": "2021-11-01T19:02:41.645Z",
+          "iopub.status.idle": "2021-11-01T19:02:41.686Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "k-19\n",
+        "k-19 $E=½mv^2$\n",
         "\n",
         "Kirjan vastaus: b) 0.32 T ja 3.3 MHz"
       ],
@@ -851,6 +889,48 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "E=7e6*1.60218e-19\n",
+        "q=2*1.60218e-19\n",
+        "m=3*1.67e-27\n",
+        "v=sqrt(2*E/m)\n",
+        "r=1.03\n",
+        "omega=v/r\n",
+        "B=omega*m/q\n",
+        "f=omega/(2pi)\n",
+        "@printf(\"Magneettivuon tiheys on %.2f T, taajuus on %.1e Hz.\\n\"\n",
+        "  ,B,f)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Magneettivuon tiheys B on 0.32 T, taajuus on 3.3e+06 Hz\n"
+          ]
+        }
+      ],
+      "execution_count": 298,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-01T19:46:06.355Z",
+          "iopub.execute_input": "2021-11-01T19:46:06.382Z",
+          "iopub.status.idle": "2021-11-01T19:46:06.441Z"
         }
       }
     },
