--- a/k.ipynb
+++ b/k.ipynb
@@ -937,7 +937,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "k-20\n",
+        "k-20 $v=\\sqrt{\\frac{2qU}{m}}$ $r=\\frac{mv}{qB}$\n",
+        "\n",
+        "$U=\\frac{m v^2}{2 q}, v=\\frac{r q B}{m}$\n",
+        "\n",
+        "$U=\\frac{m r^2 q^2 B^2}{2 q m^2}$\n",
+        "\n",
+        "$U=\\frac{r^2 q B^2}{2 m} = k \\frac{q}{m}$\n",
+        "\n",
+        "$m_{\\alpha}=4 u, q_{\\alpha}=2e$\n",
+        "$m_{p}=1 u, q_{p}=1e$\n",
+        "\n",
+        "Tarvitaan kaksinkertainen jännite eli 64 kV\n",
         "\n",
         "Kirjan vastaus: b) 64 kV"
       ],
@@ -952,7 +963,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "k-21\n",
+        "k-21 $F_m=F_s, qE=qvB => v=E/B$\n",
+        "\n",
+        "$v=\\sqrt{\\frac{2qU}{m}}$\n",
         "\n",
         "Kirjan vastaus: 46 kN/C"
       ],
@@ -961,6 +974,45 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "q=3*1.60218e-19\n",
+        "U=120e3\n",
+        "m=39.9624*1.66054e-27\n",
+        "v=sqrt(2*q*U/m)\n",
+        "B=35e-3\n",
+        "E=v*B\n",
+        "@printf(\"Sähkökentän voimakkuus on %.0f kN/C.\\n\",E/1e3)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sähkökentän voimakkuus on 46 kN/C.\n"
+          ]
+        }
+      ],
+      "execution_count": 304,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-02T20:07:35.281Z",
+          "iopub.execute_input": "2021-11-02T20:07:35.305Z",
+          "iopub.status.idle": "2021-11-02T20:07:35.354Z"
         }
       }
     },
