--- a/k.ipynb
+++ b/k.ipynb
@@ -1019,7 +1019,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "k-22\n",
+        "k-22 $F_m=IlBsin\\alpha$\n",
         "\n",
         "Kirjan vastaus: b) 32 µN itään"
       ],
@@ -1028,6 +1028,44 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "I=4\n",
+        "l=0.5\n",
+        "B=49e-6\n",
+        "m=cos(pi/180*71) # kohtisuora osuus\n",
+        "Fm=I*l*B*m\n",
+        "@printf(\"Voima on %.0f µN.\\n\",1e6*Fm)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Voima on 32 µN\n"
+          ]
+        }
+      ],
+      "execution_count": 307,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-08T17:28:33.976Z",
+          "iopub.execute_input": "2021-11-08T17:28:34.000Z",
+          "iopub.status.idle": "2021-11-08T17:28:34.136Z"
         }
       }
     },
@@ -1047,6 +1085,46 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "B=0.38\n",
+        "g=9.8\n",
+        "A=2e-6\n",
+        "ro=2.7e-3/0.01^3\n",
+        "m=A*ro\n",
+        "Fm=m*g\n",
+        "I=Fm/B\n",
+        "@printf(\"Virta on %.2f A.\\n\",I)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Virta on 0.14 A.\n"
+          ]
+        }
+      ],
+      "execution_count": 308,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-08T17:33:36.935Z",
+          "iopub.execute_input": "2021-11-08T17:33:36.965Z",
+          "iopub.status.idle": "2021-11-08T17:33:37.018Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "k-24\n",
@@ -1058,6 +1136,52 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Fm=55e-3\n",
+        "l=0.045\n",
+        "I=4\n",
+        "B=Fm/(I*l)\n",
+        "@printf(\"Magneettivuon tiheys on %.2f T.\\n\",B)\n",
+        "B=0.2\n",
+        "l=0.06\n",
+        "v=2\n",
+        "e=l*v*B\n",
+        "R=5e-3\n",
+        "I=e/R\n",
+        "Fm=B*I*l\n",
+        "@printf(\"Tarvittava voima on %.0f mN.\\n\",1e3*Fm)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Magneettivuon tiheys on 0.31 T.\n",
+            "Tarvittava voima on 58 mN.\n"
+          ]
+        }
+      ],
+      "execution_count": 310,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-08T17:42:36.251Z",
+          "iopub.execute_input": "2021-11-08T17:42:36.273Z",
+          "iopub.status.idle": "2021-11-08T17:42:36.336Z"
         }
       }
     },
@@ -1077,6 +1201,45 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "l=27\n",
+        "v=450\n",
+        "B=12e-6\n",
+        "alpha=25\n",
+        "m=cos(alpha*pi/180) # pystysuora komponentti\n",
+        "e=l*v*B*m\n",
+        "@printf(\"Jännite on %.2f V.\\n\",e)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jännite on 0.13 V.\n"
+          ]
+        }
+      ],
+      "execution_count": 315,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-08T17:49:33.642Z",
+          "iopub.execute_input": "2021-11-08T17:49:33.671Z",
+          "iopub.status.idle": "2021-11-08T17:49:33.727Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "k-28\n",
@@ -1088,6 +1251,50 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "B=1.4\n",
+        "l=0.25\n",
+        "U=12\n",
+        "R=5\n",
+        "I=U/R\n",
+        "Fm=B*I*l\n",
+        "m=0.2\n",
+        "a=Fm/m\n",
+        "@printf(\"\"\"Kiihtyvyys heti katkaisimen sulkemisen jälkeen on %.1f m/s² oikealle.\\n\"\"\",a)\n",
+        "v=U/(l*B) # Indusoituva jännite on yhtäsuuri\n",
+        "@printf(\"Rajanopeus on %.0f m/s.\\n\",v)\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kiihtyvyys heti katkaisimen sulkemisen jälkeen on 4.2 m/s² oikealle.\n",
+            "Rajanopeus on 34 m/s.\n"
+          ]
+        }
+      ],
+      "execution_count": 318,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-08T18:03:25.349Z",
+          "iopub.execute_input": "2021-11-08T18:03:25.377Z",
+          "iopub.status.idle": "2021-11-08T18:03:25.434Z"
         }
       }
     },
